fix scrollbar bug

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,8 @@
+html{
+    overflow-y: hidden;
+    overflow-x: hidden;
+}
+
 .popover-carts {
     .items-container {
         display    : flex;
